bootstrap/system/longhorn/resources/external-dns.sops.yaml
apiVersion: v1
kind: Service
metadata:
    name: longhorn-extname
    annotations:
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:kxITuQR7ANRpGkDMvLe1bM8ZXqM+0Lh9tD193W7mqjWH2A==,iv:NS54B4XFIYBZytXSLWNgbwmbFgY2v4x2QxRSYF8zE1E=,tag:sgvAxqH9n1DBTjys6IHojQ==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
spec:
    type: ExternalName
    externalName: ENC[AES256_GCM,data:OnXUq5hwz4Sga29DZmRzXNyEdtBrN2xbapAKyeUasb5swA==,iv:/rQbASLhv9WRyNZ1lg94Ba1PqR+YGiyQdHlfUpOQueU=,tag:GeyHanz4siYoDv3GXTdSnw==,type:str]
    sessionAffinity: None
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBJYWRuMWczN05udnBpVUNw
[...]
            zsayvC2rQwY4dWUq/pMrxHXwLkuh6r7nm7yVc5JeToJQK/6ovWSG7g==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-19T19:41:53Z"
    mac: ENC[AES256_GCM,data:q2pcDTEmSNGmJ4axBhccgw0h4RvMuioLfnheTbgESFeuHGue8QkhNURu4n5Fgz+b7vemwvee8Zsfxish1y31Lcs8xQfjmYaqrY1rl7lpQsOs/Hfx4UJBpGnezssLn25lta/HSzI8s2OmIjdQSC4um5Ib0xwzX3+x2t3q9n/FY3Q=,iv:QfX4z2yGAvnTr8B1A1x6vRtV+3QYw447pvA8i0CdhcQ=,tag:A1xy5eSMZwzKIXMeEWYiDg==,type:str]
    pgp:
        - created_at: "2024-06-19T19:41:53Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVARAAuuunsvjPViSancWid4oZHMpzGUVlon8XqgxPwAeBB6Ny
[...]
            =MKB4
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
