bootstrap/system/longhorn/resources/external-dns.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: longhorn-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: longhorn.system.anotherlife.org.pl
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  type: ExternalName
  externalName: longhorn.system.anotherlife.org.pl
  sessionAffinity: None
