bootstrap/system/longhorn/resources/ingressroute.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
        argocd.argoproj.io/compare-options: IgnoreExtraneous
        argocd.argoproj.io/sync-wave: "10"
        cert-manager.io/cluster-issuer: route53-letsencrypt-production
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:2ZGAdo2YhlxcgJUJTl+WIw6q884M2xZ05g==,iv:algutikJK00MoyylrDUnLvg308L0hH30rs8J6xr7V9s=,tag:W91jxopTde6RV5ejFk/BTw==,type:str]
        kubernetes.io/ingress.class: traefik-external
    labels:
        app: longhorn-frontend
    name: longhorn-frontend
    namespace: longhorn-system
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:orGWOp4qzSpcS2FfQ+ghHDI2wpzFcIBtmReKpSJXGDyGXIQeRn7dPBI4,iv:QOk7R539XBSOZRsB9QJAZcxBgimiJcCuIi/wcjxIIEU=,tag:7pA22MDnmYuFn0nMCBvhHA==,type:str]
          middlewares:
            - name: longhorn-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: longhorn-frontend
              port: 80
    tls:
        domains:
            - main: ENC[AES256_GCM,data:pEdsZkrFHijWH/F5uTCrwUH20izzZuPUZA==,iv:nE6YQHhRtpmtiFL7IcjhJBxqZ6nLtv9iyCi2Mr135YU=,tag:Alsz6Ld/BtyZcrUZuazdSg==,type:str]
              sans:
                - ENC[AES256_GCM,data:kQC7spzKjhaDUAWtCv1dl6vn0o+Ozpr5i+w=,iv:D7gkkaTZYBrD+ztjQrKyXS4n+Vai0BY49sZIVOllLqY=,tag:mUfLt2PT2cTwCLoIDBL3vA==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: longhorn-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAyelZaOXlCUGJiTkpDcjZp
[...]
            c51dueg3eo0bHt8kz9T81MXGwJzj20XzjaHRzheXzhPkjG00o6q9pg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-25T21:15:10Z"
    mac: ENC[AES256_GCM,data:w59Jileau6chYxj0ykOL1Egkj/7k4CQHsDp7mR+asQ071w/WM2b0wt3jJMi1mfPrZB35+gv0zRiDLCTg9msp0T3Iy2NzvpeK/4xvaa0u5aUDX0Axpn3aSMfCL/0xkIhKiv92MK+ypp7apxnfPuDUURcG0Rw5/nk5IhPWJuRGIXM=,iv:Dle4Z0u5vwM1SMUFaWhpY4GwdT2XlnTYCJ8oyRv1G9U=,tag:ndHiJVH3VIkC7jWyHSzzfA==,type:str]
    pgp:
        - created_at: "2024-06-19T19:42:11Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ/+KCpr37MR/GrqusAiiBSEWjGcMwEhEh9xGaKzqRitRxsF
[...]
            +SREM4V7A4TyC/KXNtZYJd0HPh0SVJVK6EcIh8+mPwHGDQ==
            =2OsW
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
