bootstrap/system/longhorn/resources/ingressroute.staging.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
        argocd.argoproj.io/compare-options: IgnoreExtraneous
        argocd.argoproj.io/sync-wave: "5"
        cert-manager.io/cluster-issuer: route53-letsencrypt-staging
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:ocd7OKJI1DkEpKn/rtkUlg6UqaSE8bqwqQ==,iv:6PDV5yth7LKRObjWRvN+kRL8NhtNorELlUPM/4fdw5s=,tag:9qekRfbH8B6NKBgPb50JRw==,type:str]
        kubernetes.io/ingress.class: traefik-external
    # labels:
    #     app.kubernetes.io/name: longhorn-frontend
    name: longhorn-frontend-staging
    namespace: longhorn-system
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:Q3vE+kMOQU/OON7eDRCBMgUEq/BgOZOhhSEGGiH525Fi6n1wKmadbUoz,iv:ioisn3RhXFNA273Hr7zvAPUcEZSwArJc3MrqHsXkYUg=,tag:yzp8LTrwd6JuS0xTFEWPlg==,type:str]
          middlewares:
            - name: longhorn-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: longhorn-frontend
              port: 80
    tls:
        domains:
            - main: ENC[AES256_GCM,data:gun0iagtHl8GohzvtxKU6eM0F7JU5ADGuw==,iv:fMcAhWa+27Aj1hKrReqHtfYd9cYF8fVmog4mXYhmAOk=,tag:pcTFvH6ohKAao3dHknRExA==,type:str]
              sans:
                - ENC[AES256_GCM,data:UIYZYx5Xv6dRDscPK+11eXd2fN2TI4LRLwU=,iv:6N6BjFXgmEiblLYzpUdAA9hKgYir/80kRsg4c6SZ/yQ=,tag:1N1gnu87iIQfEA56RRSk/A==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: longhorn-cf-staging
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBPNkgzdDRmMWovYXhCakNR
[...]
            lbBz81rCe+wE1PdB9tCftp3LB9XpWHvjsGkUr+3EM+6U514ene3vrQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-26T17:28:34Z"
    mac: ENC[AES256_GCM,data:6gM96ntUA60222paOwo2pkMiUbs5ubaI+clzWiJ+0xIN70CyulZNB3djQx10mJlMZj1WiN59mF+JpeGn268nPQQu21qj/7BX4gVinx+yo1HV7hBlf6FZF4o5xxvIgaKC389RttDOMva5M1idREsHePbtn8zVXlMQso5rATGD6x0=,iv:u2Fjvqe7Cd11krSv3tpBcoGoHNtKhg1EVRumOPB+tvc=,tag:gxa38NOCahJOSRpEu9hHuA==,type:str]
    pgp:
        - created_at: "2024-06-23T20:00:48Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ/7BqMd9ykSVhQS8biC9itS5f+QtR8qqrt1qwvek+nYsB+x
[...]
            =5BhF
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
